<resources>
    <string name="app_name">DT142G.Projekt</string>
    <string name="main_title">Antons\nSkafferi</string>
    <string name="button_servitor">Servitörsläge</string>
    <string name="button_kok">Köksläge</string>
    <string name="name">NAMN</string>
    <string name="amount">ANTAL</string>
    <string name="time">ANKOMSTTID</string>
    <string name="notes">NOTERING</string>
    <string name="createBookingButton_id">SKAPA BOKNING</string>
    <string name="dropInButton_id">DROP IN</string>
    <string name="exitButton_id">AVBRYT</string>
    <string name="back">BACK</string>
    <!-- Booking -->
    <string name="booking_current_table">temp</string>
    <!-- Tables -->
    <string name="table_1">Bord 1</string>
    <string name="table_2">Bord 2</string>
    <string name="table_3">Bord 3</string>
    <string name="table_4">Bord 4</string>
    <string name="table_5">Bord 5</string>
    <string name="table_6">Bord 6</string>
    <string name="table_7">Bord 7</string>
    <!-- Log in -->
    <string name="log_in_name">NAMN</string>
    <string name="log_in_losenord">LÖSENORD</string>
    <string name="log_in_username">Username</string>
    <string name="log_in_password">********</string>
    <string name="log_in">LOGGA IN</string>
    <!-- ORDER -->
    <string name="menu">MENU</string>
    <string name="order_current_table">temp</string>
    <string-array name="ratter">
        <item>Vanliga rätter</item>
        <item>Förätter</item>
        <item>Varmrätter</item>
        <item>Efterrätter</item>
        <item>Dryck</item>
    </string-array>
        <!-- ROW 1, POS 1-3 -->
        <string name="menu_r1p1">TEMP_ROW1</string>
        <string name="menu_r1p2">TEMP_ROW1</string>
        <string name="menu_r1p3">TEMP_ROW1</string>
        <!-- ROW 2, POS 1-3 -->
        <string name="menu_r2p1">TEMP_ROW2</string>
        <string name="menu_r2p2">TEMP_ROW2</string>
        <string name="menu_r2p3">TEMP_ROW2</string>
        <!-- ROW 3, POS 1-3 -->
        <string name="menu_r3p1">TEMP_ROW3</string>
        <string name="menu_r3p2">TEMP_ROW3</string>
        <string name="menu_r3p3">TEMP_ROW3</string>
        <!-- ROW 4, POS 1-3 -->
        <string name="menu_r4p1">TEMP_ROW4</string>
        <string name="menu_r4p2">TEMP_ROW4</string>
        <string name="menu_r4p3">TEMP_ROW4</string>
        <!-- ROW 5, POS 1-3 -->
        <string name="menu_r5p1">TEMP_ROW5</string>
        <string name="menu_r5p2">TEMP_ROW5</string>
        <string name="menu_r5p3">TEMP_ROW5</string>


</resources>